Primera etapa -> Chat

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,6 +51,7 @@
   },
   "dependencies": {
     "@dhiwise/component-tagger": "^1.0.10",
+    "@heroicons/react": "^2.2.0",
     "@heroui/react": "^2.8.4",
     "@tailwindcss/typography": "^0.5.16",
     "class-variance-authority": "^0.7.1",
@@ -63,6 +64,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "6.0.2",
     "recharts": "^2.15.2",
     "tailwind-merge": "^3.3.1"
