--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - "9000:9000"
     networks:
       - aura_net
+    depends_on:
+      - mongo
 
   # ================= Nginx =================
   nginx:
@@ -27,6 +29,23 @@ services:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - app
+    networks:
+      - aura_net
+
+  # ================= MongoDB (shared) =================
+  mongo:
+    image: mongo:7
+    container_name: aura_mongo
+    restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: aura_admin
+      MONGO_INITDB_ROOT_PASSWORD: aura_pass
+      MONGO_INITDB_DATABASE: aura_chat
+    ports:
+      - "27017:27017"
+    volumes:
+      - ../mongodb/data:/data/db
+      - ../mongodb/init.js:/docker-entrypoint-initdb.d/init.js
     networks:
       - aura_net
 
