--- a/.github/workflows/frontend-tests.yml
+++ b/.github/workflows/frontend-tests.yml
@@ -13,7 +13,6 @@ on:
 jobs:
   frontend:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -22,16 +21,13 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18
-          cache: 'npm'
+          cache: npm
 
-      - name: Install dependencies
-        working-directory: frontend
-        run: npm ci
+      - name: Install frontend dependencies
+        run: npm ci --prefix frontend
 
       - name: Run frontend tests
-        working-directory: frontend
-        run: npm test -- --watchAll=false
+        run: npm test --prefix frontend
 
       - name: Build frontend
-        working-directory: frontend
-        run: npm run build
+        run: npm run build --prefix frontend
