Arreglo IoT - Test Frontend

--- a/.github/workflows/frontend-tests.yml
+++ b/.github/workflows/frontend-tests.yml
@@ -13,21 +13,26 @@ on:
 jobs:
   frontend:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set up Node.js 18
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 18
-          cache: npm
+          cache: 'npm'
+          cache-dependency-path: 'frontend/package-lock.json'
 
-      - name: Install frontend dependencies
-        run: npm ci --prefix frontend
+      - name: Install dependencies
+        working-directory: frontend
+        run: npm ci
 
-      - name: Run frontend tests
-        run: npm test --prefix frontend
+      - name: Run tests
+        working-directory: frontend
+        run: npm test -- --watchAll=false
 
       - name: Build frontend
-        run: npm run build --prefix frontend
+        working-directory: frontend
+        run: npm run build
