--- a/frontend/package.json
+++ b/frontend/package.json
@@ -68,6 +68,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "6.0.2",
+    "react-simple-maps": "^3.0.0",
     "recharts": "^2.15.2",
     "tailwind-merge": "^3.3.1"
   },
